--- a/ext/build_defaults.yaml
+++ b/ext/build_defaults.yaml
@@ -1,2 +1,4 @@
 ---
 project: 'puppet-agent'
+packaging_url: 'git://github.com/puppetlabs/packaging.git --branch=master'
+packaging_repo: 'packaging'
