(PA-633) exclude acceptance from rubocop
As in our other projects, we exclude the `acceptance` directory from rubocop
linting, as our beaker testing/structure dsl is distinctly incompatible with
the standard ruby style guidelines.

Signed-off-by: Moses Mendoza <moses@puppet.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ AllCops:
     - 'bin/**/*.rb'
     - 'configs/**/*.rb'
   Exclude:
+    - 'acceptance/**/*'
     - 'resources/**/*.rb'
     - 'ext/**/*'
     - 'vendor/**/*'
