--- a/ext/build_defaults.yaml
+++ b/ext/build_defaults.yaml
@@ -39,6 +39,8 @@ foss_platforms:
   - ubuntu-15.10-i386
   - ubuntu-16.04-amd64
   - ubuntu-16.04-i386
+  - ubuntu-16.10-amd64
+  - ubuntu-16.10-i386
   - windows-2012-x86
   - windows-2012-x64
 pe_platforms:
